objects/BMCServiceDesk__BMC_ResourcePool__c.object
<CustomObject>
    <description>BMC_ResourcePool. Class that serves as a logical entity (with associated controls) provided by the host system to allocate and assign resources. A given ResourcePool may be used to allocate resources of a specific type. Hierarchies of ResourcePools may be created to provide administrative control over allocations. In cases where resources are subdivided, multiple resource pools may exist (for example, nodal boundaries in NUMA-like systems). In systems that support over-commitment, pools represent the reservable capacity, not an upper bound or limit on the maximum amount that can be allocated. Admission control during power-on may detect and prevent systems from powering due to resource exhaustion. For example, over-commitment on a ResourcePool with ResourceType=Memory would require that sufficient space be available in a backing store that might be managed through a storage ResourcePool.</description>
    <fields>
        <fullName>BMCServiceDesk__Allocation_Units__c</fullName>
        <label>Allocation Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Capacity__c</fullName>
        <label>Capacity</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Currently_Consumed_Resource__c</fullName>
        <label>Currently Consumed Resource</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__High_Water_Mark__c</fullName>
        <label>High Water Mark</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Low_Water_Mark__c</fullName>
        <label>Low Water Mark</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Max_Consumable_Resource__c</fullName>
        <label>Maximum Consumable Resource</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Min_Consumable_Resource__c</fullName>
        <label>Minimum Consumable Resource</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Other_Resource_Type__c</fullName>
        <label>Other Resource Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Pool_ID__c</fullName>
        <label>Pool ID</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Primordial__c</fullName>
        <label>Primordial</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                    <default>true</default>
                    <label>False</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Reserved__c</fullName>
        <label>Reserved</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Resource_Type__c</fullName>
        <label>Resource Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Computer System</fullName>
                </value>
                <value>
                    <fullName>Processor</fullName>
                </value>
                <value>
                    <fullName>Memory</fullName>
                </value>
                <value>
                    <fullName>IDE Controller</fullName>
                </value>
                <value>
                    <fullName>Parallel SCSI HBA</fullName>
                </value>
                <value>
                    <fullName>FC HBA</fullName>
                </value>
                <value>
                    <fullName>iSCSI HBA</fullName>
                </value>
                <value>
                    <fullName>IB HCA</fullName>
                </value>
                <value>
                    <fullName>Ethernet Adapter</fullName>
                </value>
                <value>
                    <fullName>Other Network Adapter</fullName>
                </value>
                <value>
                    <fullName>I/O Slot</fullName>
                </value>
                <value>
                    <fullName>I/O Device</fullName>
                </value>
                <value>
                    <fullName>Floppy Drive</fullName>
                </value>
                <value>
                    <fullName>CD Drive</fullName>
                </value>
                <value>
                    <fullName>DVD Drive</fullName>
                </value>
                <value>
                    <fullName>Disk Drive</fullName>
                </value>
                <value>
                    <fullName>Tape Drive</fullName>
                </value>
                <value>
                    <fullName>Storage Extent</fullName>
                </value>
                <value>
                    <fullName>Other Storage Device</fullName>
                </value>
                <value>
                    <fullName>Serial Port</fullName>
                </value>
                <value>
                    <fullName>Parallel Port</fullName>
                </value>
                <value>
                    <fullName>USB Controller</fullName>
                </value>
                <value>
                    <fullName>Graphics Controller</fullName>
                </value>
                <value>
                    <fullName>IEEE 1394 Controller</fullName>
                </value>
                <value>
                    <fullName>Partitionable Unit</fullName>
                </value>
                <value>
                    <fullName>Base Partitionable Unit</fullName>
                </value>
                <value>
                    <fullName>Power</fullName>
                </value>
                <value>
                    <fullName>Cooling Capacity</fullName>
                </value>
                <value>
                    <fullName>Ethernet Switch Port</fullName>
                </value>
                <value>
                    <fullName>Logical Disk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Resource Pool</label>
    <nameField>
        <label>Resource Pool Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Pools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>